# stellarspend-contracts

./: Cargo.toml
contracts/batch-payment/src/: test.rs  types.rs
contracts/budget/src/: lib.rs  storage.rs  test.rs
contracts/fee/src/: debug_log.rs  lib.rs
contracts/fee/tests/: min_fee.rs
contracts/savings-goals/src/: lib.rs  test.rs  types.rs  validation.rs
contracts/spending-limits/src/: lib.rs  test.rs  types.rs
contracts/stellarspend-contracts/src/: lib.rs
contracts/transactions/src/: lib.rs  storage.rs
contracts/user/: Cargo.toml
contracts/user/src/: lib.rs
docs/: project-structure.md  transactions-architecture.md  user-vs-users-crates.md
